--- a/frontend/src/components/css/CustomButton.css
+++ b/frontend/src/components/css/CustomButton.css
@@ -28,4 +28,27 @@
     padding: 8px 16px; /* Smaller padding */
     border-radius: 4px; /* Standard rounded corners */
   }
+
+  .custom-button.cancel {
+    background-color: rgb(136, 16, 16); /* Dark red background */
+    color: white; /* White text */
+    border: none; /* No border */
+    padding: 8px 16px; /* Padding around the text */
+    cursor: pointer; /* Cursor indicates clickable */
+    border-radius: 4px; /* Rounded corners for the button */
+}
+
+.custom-button.edit {
+  background-color: rgb(15, 4, 175); /* Dark red background */
+  color: white; /* White text */
+  position: absolute;      
+  top: 10px;              
+  right: 10px;
+  border: none; /* No border */
+  padding: 8px 16px; /* Padding around the text */
+  cursor: pointer; /* Cursor indicates clickable */
+  border-radius: 4px; /* Rounded corners for the button */
+}
+
+
   
