--- a/frontend/src/components/css/CustomButton.css
+++ b/frontend/src/components/css/CustomButton.css
@@ -1,5 +1,5 @@
 .custom-button {
-    padding: 10px 20px; /* Base padding */
+    padding: 10px 20px;
     border: none;
     color: white;
     background-color: black;
@@ -8,29 +8,27 @@
     font-style: normal;
     font-weight: 500;
     cursor: pointer;
-    border-radius: 4px; /* Slightly rounded corners for all buttons */
-    transition: background-color 0.3s; /* Smooth background color transition */
+    border-radius: 4px;
+    transition: background-color 0.3s;
   }
   
   .custom-button:hover {
-    background-color: #333; /* Slightly lighter black on hover */
+    background-color: #333;
   }
   
-  /* Large button variant */
   .custom-button.large {
     min-width: 300px;
-    padding: 16px 0; /* Larger padding */
-    border-radius: 10px; /* More pronounced rounded corners */
+    padding: 16px 0;
+    border-radius: 10px;
     font-family: Inter;
     font-size: 14px;
     font-style: normal;
     font-weight: 500;
   }
   
-  /* Small button variant */
   .custom-button.small {
-    padding: 8px 16px; /* Smaller padding */
-    border-radius: 4px; /* Standard rounded corners */
+    padding: 8px 16px;
+    border-radius: 4px;
     font-family: Inter;
     font-size: 14px;
     font-style: normal;
@@ -38,12 +36,12 @@
   }
 
   .custom-button.cancel {
-    background-color: rgb(136, 16, 16); /* Dark red background */
-    color: white; /* White text */
-    border: none; /* No border */
-    padding: 8px 16px; /* Padding around the text */
-    cursor: pointer; /* Cursor indicates clickable */
-    border-radius: 4px; /* Rounded corners for the button */
+    background-color: rgb(136, 16, 16);
+    color: white;
+    border: none;
+    padding: 8px 16px;
+    cursor: pointer;
+    border-radius: 4px;
     font-family: Inter;
     font-size: 14px;
     font-style: normal;
@@ -51,15 +49,15 @@
 }
 
 .custom-button.edit {
-  background-color: rgb(15, 4, 175); /* Dark red background */
-  color: white; /* White text */
+  background-color: rgb(15, 4, 175);
+  color: white;
   position: absolute;      
   top: 10px;              
   right: 10px;
-  border: none; /* No border */
-  padding: 8px 16px; /* Padding around the text */
-  cursor: pointer; /* Cursor indicates clickable */
-  border-radius: 4px; /* Rounded corners for the button */
+  border: none;
+  padding: 8px 16px;
+  cursor: pointer;
+  border-radius: 4px;
   font-family: Inter;
   font-size: 14px;
   font-style: normal;
