--- a/frontend/src/pages/Welcome/WelcomePage.css
+++ b/frontend/src/pages/Welcome/WelcomePage.css
@@ -26,6 +26,7 @@
   .subtitle {
     font-size: 1rem; /* Adjust the size as needed */
     color: #000;
+    font-family: Inter;
     text-align: center;
     max-width: 600px; /* Maximum width of the text for better readability */
     margin-bottom: 50px; /* Space before the buttons */
