--- a/frontend/src/pages/Welcome/WelcomePage.css
+++ b/frontend/src/pages/Welcome/WelcomePage.css
@@ -3,43 +3,43 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    min-height: 75vh; /* Ensure the welcome page takes full viewport height */
-    padding: 20px; /* Add padding to ensure content doesn't touch the edges */
+    min-height: 75vh;
+    padding: 20px;
   }
   
   .brand-penn-title {
-    font-size: 4rem; /* Adjust the size as needed */
-    font-family: Alike, sans-serif; /* Fallback font in case 'Alike' isn't available */
+    font-size: 4rem;
+    font-family: Alike, sans-serif;
     font-weight: normal;
     color: #000;
-    margin: 0 0 20px; /* Add space below the title */
+    margin: 0 0 20px;
   }
 
   .brand-lfg-title {
-    font-size: 4rem; /* Adjust the size as needed */
-    font-family: 'Krona One', sans-serif; /* Fallback font in case 'Krona One' isn't available */
+    font-size: 4rem;
+    font-family: 'Krona One', sans-serif;
     font-weight: normal;
     color: #000;
-    margin: 0 0 20px; /* Add space below the title */
+    margin: 0 0 20px;
   }
   
   .subtitle {
-    font-size: 1rem; /* Adjust the size as needed */
+    font-size: 1rem;
     color: #000;
     font-family: Inter;
     text-align: center;
-    max-width: 600px; /* Maximum width of the text for better readability */
-    margin-bottom: 50px; /* Space before the buttons */
+    max-width: 600px;
+    margin-bottom: 50px;
   }
   
   .button-group {
     display: flex;
-    gap: 20px; /* Space between buttons */
+    gap: 20px;
   }
   
   .footer {
-    margin-top: 50px; /* Space from the buttons to the footer */
+    margin-top: 50px;
     color: #000;
-    font-size: 0.8rem; /* Adjust the size as needed */
+    font-size: 0.8rem;
   }
   
